--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,39 @@ appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.2.5
 autopep8==1.4.4
+certifi==2020.12.5
+chardet==4.0.0
 colorama==0.4.1
 distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.1.3
+django-autoslug==1.9.8
+django-create-react-app==0.8.2
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.7.8
 gunicorn==20.0.4
+idna==2.10
 importlib-metadata==3.1.0
 isort==4.3.21
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 mypy==0.720
 mypy-extensions==0.4.1
+optional-django==0.1.0
 psycopg2-binary==2.8.6
 pycodestyle==2.5.0
 pyflakes==2.1.1
 pylint==2.3.1
+pylint-django==2.4.2
+pylint-plugin-utils==0.6
 pytz==2020.4
+requests==2.25.1
 six==1.12.0
 sqlparse==0.4.1
 typed-ast==1.4.0
 typing-extensions==3.7.4
+urllib3==1.26.2
 virtualenv==20.2.1
 whitenoise==5.2.0
 wrapt==1.11.2
