--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.5.0
 Django==3.1.3
 django-autoslug==1.9.8
 django-create-react-app==0.8.2
+djangorestframework==3.12.2
 entrypoints==0.3
 filelock==3.0.12
 flake8==3.7.8
@@ -28,6 +29,7 @@ pyflakes==2.1.1
 pylint==2.3.1
 pylint-django==2.4.2
 pylint-plugin-utils==0.6
+python-dotenv==0.15.0
 pytz==2020.4
 requests==2.25.1
 six==1.12.0
